--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
-DB_CONNECTION_STRING=mongodb+srv://pandyadar:Darsh%400201@clusterkanbas.g13khay.mongodb.net/kanbas?retryWrites=true&w=majority
+DB_CONNECTION_STRING=mongodb+srv://darsh:Darsh@clusterkanbas.g13khay.mongodb.net/kanbas?retryWrites=true&w=majority
