--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "kanbas-node-server-app-cs5610-fa23",
   "version": "1.0.0",
   "description": "",
-  "main": "hello.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
