--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://a6--comfy-mermaid-6a64e5.netlify.app/
 DB_CONNECTION_STRING=mongodb+srv://darsh:darsh0201@clusterkanbas.g13khay.mongodb.net/kanbas?retryWrites=true&w=majority
